k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fowergram-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: fowergram-api
